--- a/hivemind/tavern/condenser_api_patterns/get_comment_discussions_by_payout/observer_tag.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_comment_discussions_by_payout/observer_tag.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind condenser_api.get_comment_discussions_by_payout patterns test
+  test_name: Hivemind condenser_api.get_comment_discussions_by_payout patterns test observer ignoreall with tag
 
   marks:
-    - patterntest
+    - patterntest # ignoreall ignores roland.haynes (mock data)
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: get_comment_discussions_by_payout
+    - name: get_comment_discussions_by_payout ignoreall with tag
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_comment_discussions_by_payout"
-          params: {}
+          params: {"observer":"ignoreall","limit":3, "tag": "steemit"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "no_tag"
+            method: "observer_tag"
             directory: "condenser_api_patterns/get_comment_discussions_by_payout"
