--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_comments/cheetah.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_comments/cheetah.tavern.yaml
@@ -1,5 +1,5 @@
 ---
-  test_name: Hivemind condenser_api.get_discussions_by_comments pre_appbase patterns test
+  test_name: Hivemind condenser_api.get_discussions_by_comments patterns test
 
   marks:
     - patterntest
@@ -8,7 +8,7 @@
     - !include ../../common.yaml
 
   stages:
-    - name: condenser_api.get_discussions_by_comments pre_appbase patterns test
+    - name: get_discussions_by_comments
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -17,12 +17,12 @@
         json:
           jsonrpc: "2.0"
           id: 1
-          method: "call"
-          params: ["condenser_api", "get_discussions_by_comments", [{"start_author":"admin","start_permlink":"","limit":1}]]
+          method: "condenser_api.get_discussions_by_comments"
+          params: {"start_author":"cheetah"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "pre_appbase"
+            method: "cheetah"
             directory: "condenser_api_patterns/get_discussions_by_comments"
