--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_comments/paginated.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_comments/paginated.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_comments patterns test
 
   marks:
-    - patterntest
+    - patterntest # see also roadscape.tavern.yaml; original produced overlapping pages
 
   includes:
     - !include ../../common.yaml
@@ -18,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_discussions_by_comments"
-          params: {"start_author":"admin","limit":1}
+          params: {"start_author":"roadscape","start_permlink":"re-pfunk-can-we-have-advanced-mode-stick-20160510t161229520z","limit":3}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "admin"
+            method: "paginated"
             directory: "condenser_api_patterns/get_discussions_by_comments"
