--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_comments/roadscape.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_comments/roadscape.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_comments patterns test
 
   marks:
-    - patterntest
+    - patterntest # original produced overlapping pages; it does not show in this case since given permlink points to top post, so it's not in results anyway
 
   includes:
     - !include ../../common.yaml
