--- a/hivemind/tavern/tags_api_patterns/get_discussions_by_author_before_date/author_last_permlink.tavern.yaml
+++ b/hivemind/tavern/tags_api_patterns/get_discussions_by_author_before_date/author_last_permlink.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind tags_api.get_discussions_by_author_before_date patterns test author and last permlink
 
   marks:
-    - patterntest
+    - patterntest # original produced overlapping pages
 
   includes:
     - !include ../../common.yaml
