--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_author_before_date/first.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_author_before_date/first.tavern.yaml
@@ -18,7 +18,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_discussions_by_author_before_date"
-          params: {"author":"steemit","start_permlink":"firstpost","before_date":"2016-04-19T22:49:43","limit":1}
+          params: {"author":"steemit","start_permlink":"","before_date":"2016-04-19T22:49:43","limit":1}
       response:
         status_code: 200
         verify_response_with:
