--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_author_before_date/good-karma.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_author_before_date/good-karma.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_author_before_date patterns test
 
   marks:
-    - patterntest # should return empty set - no posts before 2009 (to be investigated but works like original)
+    - patterntest # original produced overlapping pages
 
   includes:
     - !include ../../common.yaml
