--- a/hivemind/tavern/tags_api_patterns/get_discussions_by_author_before_date/author_permlink_date.tavern.yaml
+++ b/hivemind/tavern/tags_api_patterns/get_discussions_by_author_before_date/author_permlink_date.tavern.yaml
@@ -2,8 +2,7 @@
   test_name: Hivemind tags_api.get_discussions_by_author_before_date patterns test author permlink date
 
   marks:
-    - patterntest
-    # does not use date, only author and permlink
+    - patterntest # does not use date, only author and permlink;  original produced overlapping pages
 
   includes:
     - !include ../../common.yaml
