--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_feed/paginated.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_feed/paginated.tavern.yaml
@@ -2,10 +2,8 @@
   test_name: Hivemind condenser_api.get_discussions_by_feed patterns test
 
   marks:
-    - patterntest # tag is not a tag but account whose feed we are looking at (set of posts created/reblogged by those followed by selected account)
-                  # there can be no nonempty results for not-up-to-date HM because it only gives posts that were created/reblogged within last month (no param to change it)
-                  # there are 2 reblogs done by 'jamesc` account
-                  # original produced overlapping pages
+    - patterntest # original produced overlapping pages
+
   includes:
     - !include ../../common.yaml
 
@@ -20,11 +18,11 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_discussions_by_feed"
-          params: {"tag":"funthing","start_author":"gavvet","start_permlink":"telescopic-tour-featuring-luision-as-author","limit":20}
+          params: {"tag":"jamesc","start_author":"rossulbricht","start_permlink":"is-ross-ulbricht-a-political-prisoner","limit":100}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "funthing"
+            method: "paginated"
             directory: "condenser_api_patterns/get_discussions_by_feed"
