--- a/hivemind/tavern/condenser_api_patterns/get_content/indirect_mutes_voter.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_content/indirect_mutes_voter.tavern.yaml
@@ -3,8 +3,8 @@
 
   marks:
     - patterntest # gtg upvote `luke-williams/buying-bitcoin-in-taiwan`
-    # alice follows muted of ignoreall who mutes gtg (mock data)
-    - xfail # observer is not implemented - has no effect on the result (votes)
+                  # alice follows muted of ignoreall who mutes gtg (mock data)
+                  # observer is not implemented - has no effect on the result (votes)
 
   includes:
     - !include ../../common.yaml
