--- a/hivemind/tavern/condenser_api_patterns/get_content/observer_ignore_author.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_content/observer_ignore_author.tavern.yaml
@@ -2,8 +2,7 @@
   test_name: Hivemind condenser_api.get_content observer ignore author
 
   marks:
-    - patterntest
-    - xfail # observer is not implemented - has no effect on the result (votes)
+    - patterntest # observer is not implemented - has no effect on the result (votes)
 
   includes:
     - !include ../../common.yaml
