--- a/hivemind/tavern/condenser_api_patterns/get_content/indirect_blacklists_voter.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_content/indirect_blacklists_voter.tavern.yaml
@@ -3,8 +3,8 @@
 
   marks:
     - patterntest # ned upvote `recursive/bertrand-russell-on-the-paradox-of-fools-and-wise-men`
-    # alice follows blacklisted of spaminator who blacklists ned (mock data)
-    - xfail # observer is not implemented - has no effect on the result (votes)
+                  # alice follows blacklisted of spaminator who blacklists ned (mock data)
+                  # observer is not implemented - has no effect on the result (votes)
 
   includes:
     - !include ../../common.yaml
