--- a/hivemind/tavern/condenser_api_patterns/get_content/indirect_muted.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_content/indirect_muted.tavern.yaml
@@ -3,7 +3,7 @@
 
   marks:
     - patterntest # alice follows muted of ignoreall who ignores gtg (mock data)
-    - xfail # observer is not implemented - has no effect on the result (votes)
+                  # observer is not implemented - has no effect on the result (votes)
 
   includes:
     - !include ../../common.yaml
