--- a/hivemind/tavern/condenser_api_patterns/get_content/observer_blacklists_voter.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_content/observer_blacklists_voter.tavern.yaml
@@ -3,7 +3,7 @@
 
   marks:
     - patterntest # ned upvote `recursive/bertrand-russell-on-the-paradox-of-fools-and-wise-men` and he is blacklisted by spaminator (mockdata)
-    - xfail # observer is not implemented - has no effect on the result (votes)
+                  # observer is not implemented - has no effect on the result (votes)
 
   includes:
     - !include ../../common.yaml
