--- a/hivemind/tavern/condenser_api_patterns/get_content/observer_ignore_voter.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_content/observer_ignore_voter.tavern.yaml
@@ -3,7 +3,7 @@
 
   marks:
     - patterntest # gtg upvote `luke-williams/buying-bitcoin-in-taiwan` and he is muted by ignoreall (mockdata)
-    - xfail # observer is not implemented - has no effect on the result (votes)
+                  # observer is not implemented - has no effect on the result (votes)
 
   includes:
     - !include ../../common.yaml
