--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/indirect_muted_paging.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/indirect_muted_paging.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_hot patterns test observer alice with paging
 
   marks:
-    - patterntest # alice follows muted of ignoreall who ignores gavvet (mock data)
+    - patterntest # alice follows muted of ignoreall who ignores gavvet (mock data);  see also paging
 
   includes:
     - !include ../../common.yaml
