--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/indirect_paging_muted_tag.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/indirect_paging_muted_tag.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_hot patterns test observer alice with tag and paging
 
   marks:
-    - patterntest # alice follows muted of ignoreall who ignores ooak (mock data)
+    - patterntest # alice follows muted of ignoreall who ignores ooak (mock data); see also tag_paging_no_observer
 
   includes:
     - !include ../../common.yaml
