--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/observer_muted_tag.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/observer_muted_tag.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_hot patterns test observer ignoreall with tag
 
   marks:
-    - patterntest # ignoreall ignores ooak (mock data)
+    - patterntest # ignoreall ignores ooak (mock data); see also tag_steemit
 
   includes:
     - !include ../../common.yaml
