--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_created/paging_life.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_created/paging_life.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_created patterns test paging mechanism
 
   marks:
-    - patterntest
+    - patterntest # see also tag_life
 
   includes:
     - !include ../../common.yaml
