--- a/hivemind/tavern/condenser_api_patterns/get_comment_discussions_by_payout/indirect_muted_paging.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_comment_discussions_by_payout/indirect_muted_paging.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_comment_discussions_by_payout patterns test observer alice with paging mechanism
 
   marks:
-    - patterntest # alice follows mute list of ignoreall who ignores r4fken (mock data)
+    - patterntest # alice follows mute list of ignoreall who ignores r4fken (mock data); see also no_observer_paging
 
   includes:
     - !include ../../common.yaml
