--- a/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/tag_paging_no_observer.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/tag_paging_no_observer.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_post_discussions_by_payout patterns test tag and paging mechanism
 
   marks:
-    - patterntest
+    - patterntest # original produced overlapping pages
 
   includes:
     - !include ../../common.yaml
