--- a/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/observer_tag_paging.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_post_discussions_by_payout/observer_tag_paging.tavern.yaml
@@ -3,6 +3,7 @@
 
   marks:
     - patterntest # ignoreall ignores kental (mock data); see also tag paging (without observer)
+                  # original didn't accept observer (.orig made without it); original also produced overlapping pages
 
   includes:
     - !include ../../common.yaml
