The variable ` error_response` correctly set in `*.yaml` files

--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/feed/honeybee2.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_account_posts/feed/honeybee2.tavern.yaml
@@ -26,3 +26,4 @@
           extra_kwargs:
             method: "honeybee2"
             directory: "bridge_api_patterns/get_account_posts/feed"
+            error_response: true
