--- a/hivemind/tavern_full_sync/bridge_api_patterns/get_discussion/felt_buzz.tavern.yaml
+++ b/hivemind/tavern_full_sync/bridge_api_patterns/get_discussion/felt_buzz.tavern.yaml
@@ -24,5 +24,5 @@
         verify_response_with:
           function: validate_response:has_valid_response
           extra_kwargs:
-            method: "felt.buzz"
+            method: "felt_buzz"
             directory: "bridge_api_patterns/get_discussion"
