[ABW]: supplemented _readme with observer description removed redundant test from get_discussions_by_hot; fixed name of another test

--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/observer_not_muted.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/observer_not_muted.tavern.yaml
@@ -2,7 +2,7 @@
   test_name: Hivemind condenser_api.get_discussions_by_hot patterns test observer
 
   marks:
-    - patterntest # test to compare with observers alice and ignoreall
+    - patterntest # test to compare with observers alice and ignoreall; see also no_params
 
   includes:
     - !include ../../common.yaml
