--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/indirect_muted.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_hot/indirect_muted.tavern.yaml
@@ -24,5 +24,5 @@
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "inderect_muted"
+            method: "indirect_muted"
             directory: "condenser_api_patterns/get_discussions_by_hot"
