--- a/hivemind/tavern/condenser_api_patterns/get_discussions_by_created/observer_muted_paging.tavern.yaml
+++ b/hivemind/tavern/condenser_api_patterns/get_discussions_by_created/observer_muted_paging.tavern.yaml
@@ -1,14 +1,14 @@
 ---
-  test_name: Hivemind condenser_api.get_discussions_by_created patterns test mock data muted
+  test_name: Hivemind condenser_api.get_discussions_by_created patterns test mock data muted with paging mechanism
 
   marks:
-    - patterntest # alice follows muted of ignoreall who ignores agartha (mock data); see also no_param
+    - patterntest # ignoreall ignores feline1991 (mock data); see also no_params
 
   includes:
     - !include ../../common.yaml
 
   stages:
-    - name: get_discussions_by_created mock data muted
+    - name: get_discussions_by_created mock data muted with paging mechanism
       request:
         url: "{service.proto:s}://{service.server:s}:{service.port}/"
         method: POST
@@ -18,11 +18,12 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_discussions_by_created"
-          params: {"observer":"alice"}
+          params: {"observer":"ignoreall","limit":3,
+                   "start_author":"anton333","start_permlink":"origami-part-11-the-model-of-skeleton-hands"}
       response:
         status_code: 200
         verify_response_with:
           function: validate_response:compare_response_with_pattern
           extra_kwargs:
-            method: "indirect_muted"
+            method: "observer_muted_paging"
             directory: "condenser_api_patterns/get_discussions_by_created"
